Implemented functionality to add a new town

--- a/towns.html
+++ b/towns.html
@@ -23,7 +23,10 @@
     <button id="btnDelete">Delete</button>
 </div>
 <div id="result"></div>
-
+    <div>
+ <input type="text" id="townNameForAdd" />
+ <button id="btnAdd">Add</button>
+</div>
 </body>
 
 </html>
