--- a/towns.html
+++ b/towns.html
@@ -25,8 +25,10 @@
 <div>
     <input type="text" id="town-name-add" />
     <button id="btnAdd">Add</button>
-    <p id="result"></p>
+    <p id="result-add"></p>
 </div>
+
+<button id="shuffle">Shuffle</button>
 <div id="result"></div>
 
 </body>
