--- a/towns.html
+++ b/towns.html
@@ -3,33 +3,39 @@
 
 <head>
     <title>Towns</title>
-	<link rel="stylesheet" href="towns.css" />
+    <link rel="stylesheet" href="towns.css" />
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="towns.js"></script>
 </head>
 
 <body>
 
-<h1>Towns</h1>
-<select id="towns" size="4">
-    <option>Sofia</option>
-    <option>Plovdiv</option>
-    <option>Varna</option>
-    <option>Bourgas</option>
-</select>
+    <article>
+        <header>Towns</header>
+        <select id="towns" size="4">
+            <option>Sofia</option>
+            <option>Plovdiv</option>
+            <option>Varna</option>
+            <option>Bourgas</option>
+        </select>
+    </article>
 
-<div>
-    <input type="text" id="townName" />
-    <button id="btnDelete">Delete</button>
-</div>
-<div>
-    <input type="text" id="town-name-add" />
-    <button id="btnAdd">Add</button>
-    <p id="result-add"></p>
-</div>
+    <article>
+        <header>Delete Existing Town</header>
+        <input type="text" id="townName" />
+        <button id="btnDelete">Delete</button>
+    </article>
 
-<button id="shuffle">Shuffle</button>
-<div id="result"></div>
+    <article>
+        <button id="shuffle">Shuffle</button>
+    </article>
+
+    <article>
+        <input type="text" id="town-name-add" />
+        <button id="btnAdd">Add</button>
+    </article>
+
+    <div id="result"></div>
 
 </body>
 
