adding shuffler funcitonalities

--- a/towns.html
+++ b/towns.html
@@ -22,7 +22,10 @@
     <input type="text" id="townName" />
     <button id="btnDelete">Delete</button>
 </div>
+
 <div id="result"></div>
+
+<div> <button id="btnShuffle">Shuffle</button> </div>
 
 </body>
 
