chore: added towns create functionality

--- a/towns.html
+++ b/towns.html
@@ -19,6 +19,10 @@
 </select>
 
 <div>
+    <input type="text" id="townCreateName">
+    <button id="btnCreate">Create Town</button>
+</div>    
+<div>
     <input type="text" id="townName" />
     <button id="btnDelete">Delete</button>
 </div>
