Implemented functionality to shuffle the existing towns

--- a/towns.html
+++ b/towns.html
@@ -26,6 +26,9 @@
     <input type="text" id="townNameForAdd" />
     <button id="btnAdd">Add</button> 
 </div> 
+<div> 
+    <button id="btnShuffle">Shuffle</button> 
+</div>
 <div id="result"></div>
 
 </body>
