--- a/towns.html
+++ b/towns.html
@@ -6,11 +6,12 @@
 	<link rel="stylesheet" href="towns.css" />
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="towns.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
 </head>
 
 <body>
 
-<h1>Towns</h1>
+<!-- <h1>Towns</h1>
 <select id="towns" size="4">
     <option>Sofia</option>
     <option>Plovdiv</option>
@@ -29,6 +30,33 @@
 <div> 
     <button id="btnShuffle">Shuffle</button> 
 </div>
+<div id="result"></div> -->
+
+<article> 
+    <header>Towns</header> 
+    <select id="towns" size="4"> 
+        <option>Sofia</option> 
+        <option>Plovdiv</option> 
+        <option>Varna</option> 
+        <option>Bourgas</option> 
+    </select> 
+</article> 
+
+<article> 
+    <header>Delete Existing Town</header> 
+    <input type="text" id="townName" /> 
+    <button id="btnDelete">Delete</button> 
+</article> 
+
+<article>
+    <header>Add Town</header>
+    <input type="text" id="townNameForAdd" />
+    <button id="btnAdd">Add</button>
+</article>
+<article>
+    <button id="btnShuffle">Shuffle</button> 
+</article>
+
 <div id="result"></div>
 
 </body>
