--- a/towns.html
+++ b/towns.html
@@ -22,6 +22,9 @@
     <input type="text" id="townName" />
     <button id="btnDelete">Delete</button>
 </div>
+<div>
+    <button id="btnShuffle">Shuffle</button>
+</div>
 <div id="result"></div>
 
 </body>
