--- a/towns.html
+++ b/towns.html
@@ -18,6 +18,14 @@
             <option>Plovdiv</option>
             <option>Varna</option>
             <option>Bourgas</option>
+            <option>Sofia</option>
+            <option>Plovdiv</option>
+            <option>Varna</option>
+            <option>Bourgas</option>
+            <option>Sofia</option>
+            <option>Plovdiv</option>
+            <option>Varna</option>
+            <option>Bourgas</option>
         </select>
     </article>
         
