--- a/towns.html
+++ b/towns.html
@@ -21,6 +21,21 @@
             <option>Sofia</option>
             <option>Plovdiv</option>
             <option>Varna</option>
+            <option>Sofia</option>
+            <option>Plovdiv</option>
+            <option>Varna</option>
+            <option>Sofia</option>
+            <option>Plovdiv</option>
+            <option>Varna</option>
+            <option>Sofia</option>
+            <option>Plovdiv</option>
+            <option>Varna</option>
+            <option>Sofia</option>
+            <option>Plovdiv</option>
+            <option>Varna</option>
+            <option>Sofia</option>
+            <option>Plovdiv</option>
+            <option>Varna</option>
         </select>
     </article>
         
