--- a/towns.html
+++ b/towns.html
@@ -27,6 +27,7 @@
     <input type="text" id="townNameForAdd" />
      <button id="btnAdd">Add</button> 
     </div>
+    <div> <button id="btnShuffle">Shuffle</button> </div>
 <div id="result"></div>
 
 </body>
