--- a/towns.html
+++ b/towns.html
@@ -10,23 +10,27 @@
 
 <body>
 
-<h1>Towns</h1>
-<select id="towns" size="4">
-    <option>Sofia</option>
-    <option>Plovdiv</option>
-    <option>Varna</option>
-    <option>Bourgas</option>
-</select>
+<article>
+    <header>Towns</header>
+    <select id="towns" size="4">
+        <option>Sofia</option>
+        <option>Plovdiv</option>
+        <option>Varna</option>
+        <option>Bourgas</option>
+    </select>
+</article>
 
-<div>
+<article>
     <input type="text" id= "townNameForAdd" />
     <button id="btnAdd">Add</button>
-</div>
+</article>
 
-<div>
+<article>
+    <header>Delete Existing Town</header>
     <input type="text" id="townName" />
     <button id="btnDelete">Delete</button>
-</div>
+</article>
+
 <div id="result"></div>
 
 </body>
