--- a/towns.html
+++ b/towns.html
@@ -19,6 +19,10 @@
 </select>
 
 <div>
+    <button id="btnShuffle">Shuffle</button>
+</div>
+
+<div>
     <input type="text" id="townName" />
     <button id="btnDelete">Delete</button>
 </div>
