--- a/towns.html
+++ b/towns.html
@@ -18,6 +18,9 @@
     <option>Bourgas</option>
 </select>
 <div>
+    <button id="btnShuffle">Shuffle</button>
+</div>
+<div>
     <input type="text" id="townNameForAdd" />
     <button id="btnAdd">Add</button>
 </div>
