--- a/towns.html
+++ b/towns.html
@@ -19,9 +19,17 @@
 </select>
 
 <div>
+    <input type="text" id="townNameForAdd" />
+    <button id="btnAdd">Add</button>
+</div>
+
+
+<div>
     <input type="text" id="townName" />
     <button id="btnDelete">Delete</button>
 </div>
+
+
 <div id="result"></div>
 
 </body>
